<resources>
    <string name="app_name">Clicker Game</string>
    <string name="play">Play</string>
    <string name="score">Score:</string>
    <string name="big">Big</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="right">right</string>
    <string name="left">left</string>
    <string name="updateScore">0</string>
    <string name="pause">pause</string>
    <string name="end">end</string>
    <string name="mode_big">Mode: Big</string>
    <string name="multiplier">Multiplier:</string>
    <string name="defaultMultiplier">1</string>
    <string name="mainclickerbutton">mainClickerButton</string>
    <string name="multiplier_upgrade">Multiplier Upgrade</string>
    <string name="defaultCost">100</string>
    <string name="gold">Gold:</string>
    <string name="costText">Cost:</string>
    <string name="moonclicker">moonClicker</string>
    <string name="astronautimage">astronautImage</string>
    <string name="add_moon">Add Moon!</string>
    <string name="defaultMoon">1</string>
    <string name="moonText">Moon:</string>
    <string name="space_clicker_game">Space Clicker Game</string>
    <string name="mainimage1">mainImage1</string>
    <string name="glowImage">glowImage</string>
</resources>
